syntax = "proto3";
package protos;

message FileMeta {
  int64 size = 1;
  bool isDir = 2;
  string md5Sum = 3;
  int32 modTime = 4;
  int32 sequence = 5;
  DirInfo dirInfo = 6;
  string relativePath = 7;
}

message DirInfo {
  int32 updateTimeStart = 1;
  int32 updateTimeEnd = 2;
  int64 totalFileSize = 3;
  int32 totalFileCount = 4;
}

message DbMeta {
  string baseDir = 1;
  int32 sequence = 2;
}

message FilePaths {
  repeated string paths = 1;
}
